--- a/package.json
+++ b/package.json
@@ -113,6 +113,9 @@
     "webpack-hot-middleware": "^2.25.3",
     "webpack-merge": "^5.8.0",
     "worker-loader": "^3.0.8"
+    "publishConfig": {
+  "@imfile-desktop:registry": "https://npm.pkg.github.com"
+}
   },
   "bugs": {
     "url": "https://github.com/imfile-io/imfile-desktop/issues"
