--- a/package.json
+++ b/package.json
@@ -1,123 +1,15 @@
 {
-  "name": "imfile",
-  "version": "1.1.2",
-  "description": "A full-featured download manager",
-  "homepage": "https://imfile.io",
-  "author": "Imfile <imfileapp@gmail.com>",
-  "copyright": "Copyright© Imfile",
-  "license": "MIT",
-  "main": "./dist/electron/main.js",
+  "name": "imfile-desktop",
+  "version": "1.0.0",
+  "description": "<p>   <a href=\"https://imfile.io/\">     <img src=\"./static/512x512.png\" width=\"256\" alt=\"Motrix App Icon\" />   </a> </p>",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/imfile-io/imfile-desktop.git"
+    "url": "imfile-desktop"
   },
-  "scripts": {
-    "release": "node .electron-vue/build.js && electron-builder --publish onTagOrDraft",
-    "build": "node .electron-vue/build.js && electron-builder",
-    "build:win7": "pnpm up electron@22 && node .electron-vue/build.js && electron-builder --win --config.directories.output=release/win32/7",
-    "build:win10": "node .electron-vue/build.js && electron-builder --win --config.directories.output=release/win32/10",
-    "build:applesilicon": "node .electron-vue/build.js && electron-builder --arm64 --mac",
-    "build:github": "node .electron-vue/build.js",
-    "build:dir": "node .electron-vue/build.js && electron-builder --dir",
-    "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
-    "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
-    "dev": "node .electron-vue/dev-runner.js",
-    "dev:renderer": "webpack serve --node-env development --hot --color --config .electron-vue/webpack.renderer.config.js --port 9080 --content-base app/dist",
-    "lint": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter src",
-    "lint:fix": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter --fix src",
-    "pack": "npm run pack:main && npm run pack:renderer",
-    "pack:main": "webpack --node-env production --progress --color --config .electron-vue/webpack.main.config.js",
-    "pack:renderer": "webpack --node-env production --progress --color --config .electron-vue/webpack.renderer.config.js",
-    "postinstall": "electron-builder install-app-deps && npm run lint:fix"
-  },
-  "engines": {
-    "node": ">=20.0.0"
-  },
-  "dependencies": {
-    "node-fetch": "^2.7.0",
-    "ws": "^8.13.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.24.4",
-    "@babel/eslint-parser": "^7.11.0",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-transform-runtime": "^7.21.4",
-    "@babel/preset-env": "^7.21.5",
-    "@babel/register": "^7.21.0",
-    "@babel/runtime": "^7.21.5",
-    "@bany/curl-to-json": "^1.2.7",
-    "@electron/notarize": "^2.0.0",
-    "@electron/osx-sign": "^1.0.4",
-    "@electron/remote": "^2.1.2",
-    "@motrix/multispinner": "^0.2.4",
-    "@motrix/nat-api": "^0.3.4",
-    "@panter/vue-i18next": "^0.15.2",
-    "@vue/eslint-config-standard": "^8.0.0",
-    "ajv": "^8.12.0",
-    "autoprefixer": "^10.4.19",
-    "axios": "^1.6.8",
-    "babel-loader": "^9.1.2",
-    "babel-plugin-component": "^1.1.1",
-    "bittorrent-peerid": "^1.3.6",
-    "blob-util": "^2.0.2",
-    "cfonts": "^3.2.0",
-    "chalk": "4.1.2",
-    "copy-webpack-plugin": "^12.0.0",
-    "cross-env": "^7.0.3",
-    "css-loader": "^7.0.0",
-    "css-minimizer-webpack-plugin": "^7.0.0",
-    "del": "^6.1.1",
-    "electron": "31.4.0",
-    "electron-builder": "^24.13.3",
-    "electron-devtools-installer": "^3.2.0",
-    "electron-is": "^3.0.0",
-    "electron-log": "^5.0.0",
-    "electron-store": "^9.0.0",
-    "electron-updater": "^6.1.8",
-    "element-ui": "^2.15.14",
-    "eslint": "^7.32.0",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^14.0.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-vue": "^9.12.0",
-    "eslint-webpack-plugin": "^4.0.1",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.1",
-    "i18next": "^23.11.2",
-    "lodash": "^4.17.21",
-    "mini-css-extract-plugin": "2.9.0",
-    "node-loader": "^2.0.0",
-    "normalize.css": "^8.0.1",
-    "parse-torrent": "^11.0.0",
-    "postcss": "^8.4.38",
-    "randomatic": "^3.1.1",
-    "sass": "1.77.2",
-    "sass-loader": "^14.0.0",
-    "style-loader": "^3.3.2",
-    "tailwindcss": "^3.4.3",
-    "terser-webpack-plugin": "^5.3.8",
-    "vue": "^2.7.16",
-    "vue-electron": "^1.0.6",
-    "vue-loader": "^15.10.1",
-    "vue-router": "^3.6.5",
-    "vue-selectable": "^0.5.0",
-    "vue-style-loader": "^4.1.3",
-    "vue-template-compiler": "^2.7.14",
-    "vuex": "^3.6.2",
-    "vuex-router-sync": "^5.0.0",
-    "webpack": "^5.82.1",
-    "webpack-cli": "^5.1.1",
-    "webpack-dev-server": "^4.15.0",
-    "webpack-hot-middleware": "^2.25.3",
-    "webpack-merge": "^5.8.0",
-    "worker-loader": "^3.0.8"
-    "publishConfig": {
-  "@imfile-desktop:registry": "https://npm.pkg.github.com"
-}
-  },
-  "bugs": {
-    "url": "https://github.com/imfile-io/imfile-desktop/issues"
-  }
+  "author": "",
+  "license": "ISC"
 }
