workflow to publish package

--- a/.npmrc
+++ b/.npmrc
@@ -3,4 +3,4 @@ registry=https://registry.npmjs.org/
 //registry.npmjs.org/:always-auth=true
 //registry.npmjs.org/:_authToken=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
 # @test:registry=http://npm.test.net // @test开头的包发布到私有镜像源。如果有需要可以加上这句
-_auth=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 // 用第一步生成的auth
+//registry.npmjs.org/:_auth_auth=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 // 用第一步生成的auth
